# ijon

./: .gitignore  CMakeLists.txt  LICENSE  README.txt
examples/: CMakeLists.txt
examples/enc_dec_random/: CMakeLists.txt  README.txt  main.c
examples/ofb_pipe/: CMakeLists.txt  README.txt  ofb.c  ofb.h
include/ijon/: ijon.h
src/: decrypt.c  encrypt.c  keyexp.c  rot.h  spn.c  spn.h
tools/: gen_key_expansion_constants.py
